_includes/css/main.css
@font-face {
  font-family: BonVivant;
  src: url("/fonts/Bon\ Vivant\ 2/Bon Vivant Serif Bold.otf") format("opentype");
}
@font-face {
  font-family: NeueHaas;
  src: url("/fonts/Neue Haas Grotesk/NHaasGroteskTXPro-55Rg.otf") format("opentype");
}
@font-face {
  font-family: NeueHaasBody;
  src: url("/fonts/Neue Haas Grotesk/NeueHaasGrotDisp-45Light.otf") format("opentype");
}




* {box-sizing: border-box;}

body {
  font-size: 20px;
  font-family: NeueHaasBody;
  line-height: 160%;
  letter-spacing: 0.03em;
  font-style: normal;
  font-weight: normal;
}

body, .bg {
  background-image: url(/images/bg.svg);
  background-size: cover;
  background-color: #F4EEF7;
}

h1, h2, h3, h4, h5, h6 {font-family: "BonVivant";}

.font-bon-vivant {font-family: "BonVivant";}
.font-neue-haas {font-family: NeueHaas;}
.font-neue-haas-body {font-family: NeueHaasBody;}
.text-pink {
  color: #F0E9F4;
}
.bg-pink {
  background: #F0E9F4;
}

.text-black {color: #201D25;}
.text-black:hover {
  color: #201D25;
  text-decoration: none;
}

.line {
  display: inline-block;
  height: 3px;
  width: 40px;
  margin-right: 1em;
  background-color: #201D25;
  vertical-align: super;
}
.line-v {
  display: inline-block;
  height: 1px;
  width: 40px;
  background-color: #201D25;
  vertical-align: super;
  transform: rotateZ(90deg);
}



.arrow {
  display: inline-block;
  border-top: 2px solid #201D25;
  box-sizing: border-box;
  transform: rotate(-45deg);
  height: 0.7em;
  width: 0.7em;
  border-left: 2px solid #201D25;
}

img {
  max-width: 100%;
}

.uppercase {
  text-transform: uppercase;
}
.small {
  font-size: 0.8em;
}
.card {
  background: none;
}
.text-black {
  color: black;
}

@media all and (max-width: 50em) {
  .tool-title {
    font-size: 3.6rem;
  }
}


.loading-overlay {
  height: 100vh;
  width: 100vw;
}
.loading-overlay > * {
  display: none;
}
.overlay {
  display: none;
}
.loading-overlay > .overlay {
  display: block !important;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.overlay .logo {
  position: absolute;
  top: calc(50% - 2em);
  left: calc(50% - 2em);
}
.overlay .loading-progress {
  position: absolute;
  top: calc(58% - 1em);
  left: calc(50% - 3em);
  animation: progress 1s ease;
  background-color: black;
  height: 2px;
}
@keyframes progress {
  from {
    width: 0;
  }
  to {
    width: 6em;
  }
}

.logo-wrapper {
  position: absolute;
  top: 2em;
  right: 2em;
  width: 8em;
}


.rotate-vertical {
  transform: rotateZ(-90deg);
  transform-origin: 7.7em 6.1em;
}

.min-height-tool-description {
  min-height: 16em;
}

@media all and (max-width: 1300px) {
  .min-height-tool-description {
    min-height: 20em;
  }
}
@media all and (max-width: 800px) {
  .min-height-tool-description {
    min-height: 18em;
  }
}

.grayscale-image {
    -webkit-filter: grayscale(100%);
       -moz-filter: grayscale(100%);
         -o-filter: grayscale(100%);
        -ms-filter: grayscale(100%);
            filter: grayscale(100%);
}


ul {
  list-style-type: disc;
}

.list-with-arrows {
  list-style-image: url('/images/arrow-list-item.svg');
}

ul li {
  margin-left: 0.8em;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  padding-left: 0.7em;
}

.small-label {
  font-size: 13px;
  letter-spacing: 0.2rem;
}
.info-heading {
  font-size: 30px;
}

.max-width-500 {
  max-width: 500px;
}


/* https://css-tricks.com/touch-devices-not-judged-size/ */
@media (hover: hover) {
  body, body a {
    cursor: none;
  }
  
  body .cursor {
    pointer-events: none;
  }
  body .cursor__ball {
    position: fixed;
    top: 0;
    left: 0;
    /* mix-blend-mode: difference; */
    z-index: 10000;
  }
  body .cursor__ball circle {
    opacity: 0.7;
    fill: #000;
  }
  
  body .cursor__ball--small circle {
    fill: #f7f8fa;
  }
}

@media (hover: none) {
  body .cursor {
    display: none;
  }
}

h1, h2, h3, h4, h5 {
  scroll-margin-top: 2em;
}

@media all and (max-width:50em) {
  .hidden-50em {
    display: none;
  }
  .block-50em {
    display: block;
  }
  .ratio-4-3 {
    width:100%;
    position:relative;
    background:url() 50% 50% no-repeat;
    background-size:cover;
    background-clip:content-box;
    background-position: 50% 50%;
  }
  .ratio-4-3:before {
      display:block;
      content:"";
      padding-top:75%;
  }
}

@media all and (max-width:50em) {
  .mobile-heading {
    font-size: 1.8em;
  }
}

